0.7.1
-----
x Fixed crash with MOV files having non video/audio tracks (e.g. a caption track)
x Fixed crash with some AVI files having streams with unknown format
x Mac-styled toolbar disabled because the toolbar dos not permit to move the window as expected by Mac users

0.7.0, 2015-02-17
-----
+ Saturation Highlight playback filter
+ Zoom playback filter
+ Graph tracker text with semi transparent gray background
+ Basic support of Blackmagic DeckLink (tested on Mac, looking for a tester on Windows and Linux)
+ Added metadata columns in table view for color space, color range, frame rate details, sample aspect ratio
+ Added 'Broadcast Illegal Focus' filter
x Zooming in with more than the default graphs, shifts display offset (GitHub issue #41)
x Left-align graph labels, instead of centering them (GitHub issue #45)
x Y-scale label values disappear when zooming (GitHub issue #46)
x Seek was not possible in the playback window during the analysis
x Some colors change, marker text contains data values (GitHub issue #23)
x Support of Mac OS X 10.6 (GitHub issue #63)

0.6.2, 2014-10-29
-----
x Memory leaks removed

0.6.1, 2014-10-15
-----
x Crash with MP4 files on Mac OS X 10.7 (GitHub issue #40)

0.6.0, 2014-10-09
-----
+ Summarization statistics
+ pkt_duration_time is added to tha sidecar stats file in order to get the real end timestamp of the stream
+ The full width of graphs is used
+ File list info shows empty data instead of 0 when the video file is not present
+ Speed improvements
+ The graph marker is now on a frame value
+ RHEL/CentOS 6/7 binaries
+ Debian 6 binaries
+ Ctrl+G keyboard shortcut for "Go to frame at position" (GitHub issue #30)
+ F1 keyboard shortcut for help
x Minimize/maximize button on video preview window (GitHub issue #24)
x Position of cursor in graph not updated, when moving in preview window (GitHub issue #18)
x YUVJ (full range) were shrinked to broadcast range, now using Ffmpeg update for better YUVJ handling (GitHub issue #36)